--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Rampart+One&family=Roboto:ital,wght@0,100;0,300;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
 <script src="https://code.jquery.com/jquery-migrate-3.4.1.js"></script>
 <script src="app.js"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="main">
+            <span class="value">40px</span>
+            <input type="range" name="range" id="range-slider" class="range-slider" min="16" max="100" value="40" step="1">
+        </div>
+        <div class="heading">
+            <span class="text">Subscrib To our channel</span>
+        </div>
+    </div>
 </body>
 </html>
